# amman-python-401d4

./: .gitignore  README.md
class-01/demo/: first_program.py
class-02/code_review/: code_challenge.md
class-03/: spam.txt
class-03/code_review/: math_series.py
class-03/madlib-cli/: pyproject.toml
class-04/code_review/: dark_and_stormy_night_template.txt  exceptions_review.py  madlib.py  test_madlibe.py
class-04/demo/: classes_demo.py  life_without_classes.py
class-04/lab/: test_band.py
class-05/: DISCUSSION.md  LAB.md
class-05/resources/: singly_linked_list.md
class-06/: extras.py
class-06/lab/: README.md
class-07/code_review/: linked_list.py
class-07/demo/: testing_fact.py
class-07/flow/: flo.py
class-08/code_review/: game_v2.py
class-08/demo/: decorators.py
class-08/flow/: bank_one_roll_then_quit.sim.txt  cheat_and_fix.txt  hot_dice.txt  living_on_the_edge.txt  quitter.sim.txt  zilch.txt
class-10/: DISCUSSION.md  LAB.md
class-10/resources/: stacks_and_queues.md
class-11/code_review/: array_vs_queue.py
class-11/demo/chess-board/: demo.ipynb  images.ipynb  pyproject.toml
class-12/code_review/: pseudo_queue.py
class-12/demo/vaccination/: country_vaccinations_by_manufacturer.csv  data_by_country_and_vaccine.json  pandas_vaccine.ipynb  pyproject.toml
class-13/demo/salary/: Regression.ipynb  pyproject.toml
class-14/code_review/: stack_queue_brackets.py
class-14/demo/flights_using_seaborn/: flights.ipynb  pyproject.toml
class-15/: DISCUSSION.md  LAB.md
class-15/resources/: Trees.md
class-17/: one_job.html
class-17/code_review/: binary_tree_v2.py
class-17/demo/web-scraping/: all_jobs.json  data.html  pyproject.toml
class-17/demo/web-scraping/tests/: test_web_scraping.py
class-17/demo/web-scraping/web_scraping/: scraper.py
class-18/code_review/: binary_tree_v3.py  queue.py
class-19/code_challenge/: queue.py  tree.py
class-26/demo/: lecture_notes.md
class-27/code_challenge_review/: review.md
class-27/demo/django-movies/: db.sqlite3  pyproject.toml
class-27/demo/django-movies/movies/: models.py  urls.py  views.py
class-27/demo/django-movies/movies/migrations/: 0002_movie_rank.py  0004_remove_movie_watcher.py
class-27/demo/django-movies/movies_project/: settings.py  urls.py
class-27/demo/django-movies/templates/: base.html  home.html  movie_details.html  movies.html
class-28/code_challenge_review/: merge_sort.py
class-29/lab/: README.md
class-30/demo/: hashtable.md
class-30/resources/: DISCUSSION.md  Hashtables.md
class-31/: notes.md
class-32/demo/blogapi-permissions/: db.sqlite3  pyproject.toml  requirements.txt
class-32/demo/blogapi-permissions/blogapi_project/: settings.py  urls.py
class-32/demo/blogapi-permissions/posts/: models.py  views.py
class-33/code_review/: challenge_32.md
class-33/demo/blogapi-permissions/: db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
class-33/demo/blogapi-permissions/blogapi_project/: asgi.py  settings.py  urls.py  wsgi.py
class-33/demo/blogapi-permissions/posts/: permissions.py
class-34/code_review/: left_join.py
class-36/: DISCUSSION.md  README.md
class-36/resources/: graphs.md
class-39/code_challenge_review/: graph.py
class-41/: project-expectations.md
class-42/demo/: linked_list.py  play_ground.py  (+1 more)
(+134 files in other folders)
