[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Hadeaji <hadeaji@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
jupyterlab = "^3.0.16"
matplotlib = "^3.4.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
