[tool.poetry]
name = "flights_using_seaborn"
version = "0.1.0"
description = ""
authors = ["Ahmad Alawad <ahmad.alawad.sf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.2"
jupyterlab = "^3.0.16"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
