[tool.poetry]
name = "django-movies"
version = "0.1.0"
description = ""
authors = ["Ahmad Alawad <ahmad.alawad.sf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
django = "^3.2.5"
black = "^21.6b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
